--- a/ci/prow/templates/prow_plugins.yaml
+++ b/ci/prow/templates/prow_plugins.yaml
@@ -12,17 +12,20 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Settings for the "approve" plugin.
 approve:
 - repos:
   [[indent_array 2 .TideRepos]]
   require_self_approval: false
   ignore_review_state: false
-  
+
+# Settings for the "heart" plugin.
 heart:
   adorees:
   - knative-test-reporter-robot
   commentregexp: ".*"
 
+# Settings for the "milestone" plugin.
 repo_milestone:
   # Default maintainer
   '':
@@ -32,21 +35,23 @@ repo_milestone:
     maintainers_id: 3012514
     maintainers_team: knative-milestone-maintainers
 
+# Settings for the "project" plugin.
 project_config:
   project_org_configs:
     knative:
       org_maintainers_team_id: 2652083 # knative-admin
-      # TODO(Fredy-Z): Enable this plugin for other repos when needed.
+      # TODO(Fredy-Z): Enable the plugin for other repos when needed.
       project_repo_configs:
         eventing:
           # TODO(grantr): replace with a new team eventing-project-maintainers
           repo_maintainers_team_id: 3012514 # knative-milestone-maintainers
           repo_default_column_map:
-            perf/measurement:
-              To do
+            perf/measurement: "To do"
         eventing-contrib:
           # TODO(grantr): replace with a new team eventing-contrib-project-maintainers
           repo_maintainers_team_id: 3012514 # knative-milestone-maintainers
+
+# Plugins enabled for each repo.
 
 plugins:
 [[range .TideRepos]]
