--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -56,9 +56,8 @@ deck:
           - 'panic: test timed out after.*$'
           - timed out
           - 'ERROR:'
-          - (\s|^)(FAIL|Failure \[)\b
+          - 'FAIL:'
           - (\s|^)panic\b
-          - ^E\d{4} \d\d:\d\d:\d\d\.\d\d\d]
       required_files:
       - build-log.txt
     - lens:
