--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -407,7 +407,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-tests.sh"
+        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
         volumeMounts:
         - name: repoview-token
           mountPath: /etc/repoview-token
@@ -451,7 +451,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-tests.sh"
+        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
         volumeMounts:
         - name: repoview-token
           mountPath: /etc/repoview-token
@@ -497,7 +497,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-tests.sh"
+        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
         volumeMounts:
         - name: repoview-token
           mountPath: /etc/repoview-token
@@ -536,7 +536,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-upgrade-tests.sh"
+        - "./test/e2e-upgrade-tests.sh --istio-version 1.2-latest --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -570,7 +570,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-upgrade-tests.sh"
+        - "./test/e2e-upgrade-tests.sh --istio-version 1.2-latest --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -606,7 +606,7 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-upgrade-tests.sh"
+        - "./test/e2e-upgrade-tests.sh --istio-version 1.2-latest --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
