--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -3553,6 +3553,37 @@ presubmits:
       - name: covbot-token
         secret:
           secretName: covbot-token
+  - name: pull-knative-eventing-operator-integration-tests-on-latest-eventing
+    agent: kubernetes
+    context: pull-knative-eventing-operator-integration-tests-on-latest-eventing
+    always_run: false
+    rerun_command: "/test pull-knative-eventing-operator-integration-tests-on-latest-eventing"
+    trigger: "(?m)^/test (all|pull-knative-eventing-operator-integration-tests-on-latest-eventing),?(\\s+|$)"
+    decorate: true
+    optional: true
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests-latest-eventing.sh"
+        volumeMounts:
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: test-account
+        secret:
+          secretName: test-account
 periodics:
 - cron: "10 */2 * * *"
   name: ci-knative-serving-continuous
@@ -5704,6 +5735,36 @@ periodics:
     - name: release-account
       secret:
         secretName: release-account
+- cron: "26 */2 * * *"
+  name: ci-knative-eventing-operator-integration-tests-on-latest-eventing
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: eventing-operator
+    base_ref: master
+    path_alias: knative.dev/eventing-operator
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
+      imagePullPolicy: Always
+      command:
+      - runner.sh
+      args:
+      - "./test/e2e-tests-latest-eventing.sh"
+      volumeMounts:
+      - name: test-account
+        mountPath: /etc/test-account
+        readOnly: true
+      env:
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/test-account/service-account.json
+      - name: E2E_CLUSTER_REGION
+        value: us-central1
+    volumes:
+    - name: test-account
+      secret:
+        secretName: test-account
 - cron: "0 1 * * *"
   name: ci-knative-eventing-operator-go-coverage
   labels:
