--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -190,6 +190,12 @@ presubmits:
       dot-dev: true
     - go-coverage: true
       dot-dev: true
+    - custom-test: integration-tests-on-latest-eventing
+      always_run: false
+      optional: true
+      args:
+        - "--run-test"
+        - "./test/e2e-tests-latest-eventing.sh"
 
   knative/website:
     # This repo only uses Tide
@@ -375,6 +381,9 @@ periodics:
     - dot-release: true
       dot-dev: true
     - auto-release: true
+      dot-dev: true
+    - custom-job: integration-tests-on-latest-eventing
+      command: "./test/e2e-tests-latest-eventing.sh"
       dot-dev: true
 
   google/knative-gcp:
