--- a/ci/prow/testgrid.yaml
+++ b/ci/prow/testgrid.yaml
@@ -212,6 +212,10 @@ test_groups:
 - name: ci-knative-eventing-operator-auto-release
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-auto-release
   alert_stale_results_hours: 3
+- name: ci-knative-eventing-operator-integration-tests-on-latest-eventing
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-integration-tests-on-latest-eventing
+  alert_stale_results_hours: 3
+  num_failures_to_alert: 3
 - name: pull-knative-eventing-operator-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-go-coverage
   num_failures_to_alert: 9999
@@ -418,6 +422,9 @@ dashboards:
     base_options: "sort-by-name="
   - name: auto-release
     test_group_name: ci-knative-eventing-operator-auto-release
+    base_options: "sort-by-name="
+  - name: integration-tests-on-latest-eventing
+    test_group_name: ci-knative-eventing-operator-integration-tests-on-latest-eventing
     base_options: "sort-by-name="
   - name: coverage
     test_group_name: pull-knative-eventing-operator-test-coverage
