--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -118,6 +118,7 @@ presubmits:
     - go-coverage: true
     - custom-test: markdown-link-check
       always_run: true
+      optional: true
       command:
         - "./test/presubmit-link-check.sh"
 
