--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -273,6 +273,10 @@ periodics:
       full-command: "./test/e2e-tests.sh --gloo-version 0.17.1"
       dot-dev: true
       go113: true
+    - custom-job: https
+      full-command: "./test/e2e-tests.sh --https"
+      dot-dev: true
+      go113: true
     - nightly: true
       dot-dev: true
       go113: true
