--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -73,6 +73,12 @@ presubmits:
       args:
       - "--run-test"
       - "./test/e2e-tests.sh --gloo-version 0.17.1"
+    - custom-test: https
+      always_run: false
+      optional: true
+      args:
+      - "--run-test"
+      - "./test/e2e-tests.sh --https"
 
   knative/client:
     - build-tests: true
@@ -271,10 +277,6 @@ periodics:
       go113: true
     - custom-job: gloo-0.17.1
       full-command: "./test/e2e-tests.sh --gloo-version 0.17.1"
-      dot-dev: true
-      go113: true
-    - custom-job: https
-      full-command: "./test/e2e-tests.sh --https"
       dot-dev: true
       go113: true
     - nightly: true
