use a specific mdl version because rubygem uses ruby 2.3 and starting from mdl 0.6.0, it requires ruby >= 2.4

--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -57,7 +57,7 @@ RUN ko version > /ko_version
 
 # Extra tools through gem
 RUN gem install mixlib-config -v 2.2.4  # required because ruby is 2.1
-RUN gem install mdl
+RUN gem install mdl -v 0.5  # required because later version of mdl requires ruby >= 2.4
 
 # Temporarily add test-infra to the image to build custom tools
 ADD . /go/src/knative.dev/test-infra
